manifests/base/resources/web-notifications/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-notifications
    chart: web-notifications-1.5.12
    heritage: Helm
    release: web-notifications
  name: web-notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-notifications
      release: web-notifications
  template:
    metadata:
      labels:
        app: web-notifications
        release: web-notifications
    spec:
      containers:
      - env:
        - name: KEYS_URI
          valueFrom:
            configMapKeyRef:
              key: keysUri
              name: web-notifications-configs
        - name: JWKS_ENDPOINT
          value: $(KEYS_URI)/v1/keys/qlik.api.internal
        - name: TOKEN_AUTH_PRIVATE_KEY_ID
          valueFrom:
            secretKeyRef:
              key: tokenAuthPrivateKeyId
              name: web-notifications-secrets
        - name: KEY_ID
          value: $(TOKEN_AUTH_PRIVATE_KEY_ID)
        - name: TOKEN_AUTH_URI
          valueFrom:
            configMapKeyRef:
              key: tokenAuthUri
              name: web-notifications-configs
        - name: INTERNAL_TOKENS_RESOURCE
          value: $(TOKEN_AUTH_URI)/v1
        - name: NATS_URI
          valueFrom:
            configMapKeyRef:
              key: natsUri
              name: web-notifications-configs
        - name: NATS_URL
          value: $(NATS_URI)
        - name: NATS_STREAMING_CLUSTER_ID
          valueFrom:
            configMapKeyRef:
              key: natsStreamingClusterId
              name: web-notifications-configs
        - name: NATS_CLUSTER_ID
          value: $(NATS_STREAMING_CLUSTER_ID)
        - name: LOG_LEVEL
          value: debug
        - name: PRIVATE_KEY_FILE
          value: /run/secret/web-notifications/jwtPrivateKey
        - name: ROLLBAR_ENABLED
          value: "false"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              key: mongodb-uri
              name: web-notifications-mongoconfig
        - name: NATS_ENABLED
          value: "true"
        - name: NATS_CLIENT_ID
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: qlik-docker-qsefe.bintray.io/web-notifications:0.0.21
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
        name: main
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
        volumeMounts:
        - mountPath: /run/secret/web-notifications
          name: web-notifications-secret
          readOnly: true
      imagePullSecrets:
      - name: artifactory-docker-secret
      volumes:
      - name: web-notifications-secret
        secret:
          items:
          - key: tokenAuthPrivateKey
            path: jwtPrivateKey
          secretName: web-notifications-secrets
---
