manifests/base/resources/web-notifications/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: web-notifications
    chart: web-notifications-1.5.12
    heritage: Helm
    release: web-notifications
  name: web-notifications
spec:
  ports:
  - name: web-notifications
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web-notifications
    release: web-notifications
  type: ClusterIP
---
