manifests/base/resources/web-notifications/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://web-notifications-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: web-notifications
    chart: web-notifications-1.5.12
    heritage: Helm
    release: web-notifications
  name: web-notifications
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web-notifications
          servicePort: 8080
        path: /api/v1/web-notifications
---
